2023-06-22/first_class_functions/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/first_class_functions)
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:92:12
   |
92 |     return ((*comp).f1).expect("non-null function pointer")(((*comp).f2)
   |            ^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:92:61
   |
92 |     return ((*comp).f1).expect("non-null function pointer")(((*comp).f2)
   |                                                             ^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> src/main.rs:92:61
   |
92 |       return ((*comp).f1).expect("non-null function pointer")(((*comp).f2)
   |  _____________________________________________________________^
93 | |         .expect("non-null function pointer")(
94 | |         val
95 | |     ));
   | |_____^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> src/main.rs:92:12
   |
92 |       return ((*comp).f1).expect("non-null function pointer")(((*comp).f2)
   |  ____________^
93 | |         .expect("non-null function pointer")(
94 | |         val
95 | |     ));
   | |______^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `c2rust_out` (bin "main") due to 4 previous errors
